# Mini-Ts

./: .gitignore  CMakeLists.txt  README.md
include/: packetizer.hpp  parser.hpp  ts_packet.hpp
src/: main.cpp  packetizer.cpp  parser.cpp  ts_packet.cpp
test/: test_ts.cpp
